hphp/hack/test/typecheck/await_in_expressions5.php.exp
File "await_in_expressions5.php", line 4, characters 11-17:
Await cannot be used as an expression in this location because it's conditionally executed. (Parsing[1002])
